<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/base_info_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.base_information.BaseInfoFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/address_layout_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/address_layout_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="@dimen/small"
                android:text="@string/address"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/address_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:padding="@dimen/large"
                android:text="@string/address_hint"
                android:textSize="18sp"
                android:textStyle="italic" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/phone_layout_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_layout_cv">

        <LinearLayout
            android:id="@+id/phone_layout_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="@dimen/small"
                android:text="@string/phone"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/phone_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:padding="@dimen/large"
                android:text="@string/phone_hint"
                android:textSize="18sp"
                android:textStyle="italic" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/mail_layout_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_layout_cv">

        <LinearLayout
            android:id="@+id/mail_layout_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="@dimen/small"
                android:text="@string/e_mail"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/mail_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:padding="@dimen/large"
                android:text="@string/mail_hint"
                android:textSize="18sp"
                android:textStyle="italic" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/github_layout_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail_layout_cv">

        <LinearLayout
            android:id="@+id/github_layout_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="@dimen/small"
                android:text="@string/github"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/github_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:padding="@dimen/large"
                android:text="@string/github_hint"
                android:textSize="18sp"
                android:textStyle="italic" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/linkedin_layout_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/github_layout_cv">

        <LinearLayout
            android:id="@+id/linkedin_layout_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="@dimen/small"
                android:text="@string/linkedin"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/linkedin_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:padding="@dimen/large"
                android:text="@string/linkedin_hint"
                android:textSize="18sp"
                android:textStyle="italic" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <include
        android:id="@+id/loading_state"
        layout="@layout/please_wait_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>